src/test/deca/context/invalid/provided/class2.deca
class A {
    int x =5;
}

{
    B b = new A();
}